<resources>
    <string name="app_name">MiniTwitter</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_email">Email</string>
    <string name="btn_login">INICIAR SESSION</string>
    <string name="text_create_account">Si aun no tiene cuenta... registrate.</string>
    <string name="hin_username">Username</string>
    <string name="text_go_login">Ya tienes una cuenta?</string>
    <string name="btn_signup">Registrarme</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_test">TestActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_text_new_tweet">¿ Que esta pasando?</string>
</resources>
