<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="false"
    android:background="@color/colorAzul"
    tools:context=".ui.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginBottom="16dp"
        app:chainUseRtl="true"
        app:layout_constraintBottom_toTopOf="@+id/editTextSignupUsername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/ic_logo_minitwitter_white" />

    <EditText
        android:id="@+id/editTextSignupUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/hin_username"
        android:inputType="textPersonName"
        android:textColor="@android:color/white"
        android:textColorHighlight="@color/colorAzulDark"
        android:textColorHint="@color/colorAzulDark"
        android:textColorLink="@android:color/white"
        app:chainUseRtl="true"
        app:layout_constraintBottom_toTopOf="@+id/editTextSignUpEmail"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/editTextSignUpEmail"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/background_light"
        android:textColorHighlight="@color/colorAzulDark"
        android:textColorHint="@color/colorAzulDark"
        android:textColorLink="@android:color/white"
        app:chainUseRtl="true"
        app:layout_constraintBottom_toTopOf="@+id/editTextSignUpPass"
        app:layout_constraintEnd_toEndOf="@+id/editTextSignupUsername"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="@+id/editTextSignupUsername"
        app:layout_constraintTop_toBottomOf="@+id/editTextSignupUsername"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/editTextSignUpPass"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:textColor="@android:color/white"
        android:textColorHighlight="@color/colorAzulDark"
        android:textColorHint="@color/colorAzulDark"
        android:textColorLink="@android:color/white"
        app:chainUseRtl="true"
        app:layout_constraintBottom_toTopOf="@+id/btnSignupSave"
        app:layout_constraintEnd_toEndOf="@+id/editTextSignUpEmail"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="@+id/editTextSignUpEmail"
        app:layout_constraintTop_toBottomOf="@+id/editTextSignUpEmail"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/btnSignupSave"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@android:color/white"
        android:text="@string/btn_signup"
        android:textColor="@color/colorAzul"
        app:chainUseRtl="true"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="@+id/editTextSignUpPass"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="@+id/editTextSignUpPass"
        app:layout_constraintTop_toBottomOf="@+id/editTextSignUpPass"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/btnLogin"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/text_go_login"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:chainUseRtl="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnSignupSave"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="@+id/btnSignupSave"
        app:layout_constraintTop_toBottomOf="@+id/btnSignupSave"
        app:layout_constraintVertical_chainStyle="packed" />



</androidx.constraintlayout.widget.ConstraintLayout>